--- a/section 6/countourDetection.ipynb
+++ b/section 6/countourDetection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.cvtColor(cv2.imread('internal_external.png'),cv2.COLOR_BGR2RGB)"
+    "img = cv2.cvtColor(cv2.imread('internal_external.png'),cv2.COLOR_BGR2GRAY)"
    ]
   },
   {
@@ -26,9 +26,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
