custom watershed implemented succesfully

--- a/section 6/customSeedWatershedAlgorithm.ipynb
+++ b/section 6/customSeedWatershedAlgorithm.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "road = load()\n",
+    "road = cv2.imread('road_image.jpg')\n",
     "road_copy = road.copy()"
    ]
   },
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "marker_img = np.zeros(road.shape[:2],dtype=np.int32)\n",
-    "segments = np.zeros(road.shape,dtype=np.uint8)"
+    "segment = np.zeros(road.shape,dtype=np.uint8)"
    ]
   },
   {
@@ -102,13 +102,34 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(31.0, 119.0, 180.0),\n",
+       " (255.0, 127.0, 14.0),\n",
+       " (44.0, 160.0, 44.0),\n",
+       " (214.0, 39.0, 40.0),\n",
+       " (148.0, 103.0, 189.0),\n",
+       " (140.0, 86.0, 75.0),\n",
+       " (227.0, 119.0, 194.0),\n",
+       " (127.0, 127.0, 127.0),\n",
+       " (188.0, 189.0, 34.0),\n",
+       " (23.0, 190.0, 207.0)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" now setting one color of each digit \"\"\"\n",
     "colors = []\n",
     "for i in range(10):\n",
     "    colors.append(create_rgb(i))         # now colors as 10 rbg codes in it\n",
-    "    \n"
+    "    \n",
+    "colors"
    ]
   },
   {
@@ -126,7 +147,7 @@
     "def mouse_callback(event, x,y, flags, param):\n",
     "    global marks_updated\n",
     "    if(event == cv2.EVENT_LBUTTONDOWN):\n",
-    "        cv2.circle(marker_img,(x,y),10,curr_marker,-1)\n",
+    "        cv2.circle(marker_img,(x,y),10,(curr_marker),-1)\n",
     "        cv2.circle(road_copy,(x,y),10,colors[curr_marker],-1)\n",
     "        marks_updated=True\n"
    ]
@@ -154,8 +175,8 @@
     "\n",
     "\n",
     "while True:\n",
-    "    \n",
-    "    cv2.imshow(\"Watershed Segments\",segments)\n",
+    "#     cv2.imshow(\"marker_img\",marker_img)\n",
+    "    cv2.imshow(\"Watershed Segments\",segment)\n",
     "    cv2.imshow(\"Road Image\",road_copy)\n",
     "\n",
     "    \n",
@@ -168,21 +189,21 @@
     "        \n",
     "    elif k == ord('c'):      # clear the output\n",
     "        road_copy = road.copy()\n",
-    "        marker_img = np.zeros(road.shape[:2],dtype=np.int32)\n",
+    "        marker_img = np.zeros(road.shape[0:2],dtype=np.int32)\n",
     "        segment = np.zeros(road.shape,dtype=np.uint8)\n",
     "        \n",
     "        # if k belongs to [0,9] its choosen index of color \n",
-    "        if k >0 and chr(k).isdigit():\n",
-    "            current_marker = int(chr(k))\n",
+    "    elif k > 0 and chr(k).isdigit():\n",
+    "        curr_marker = int(chr(k))\n",
     "        \n",
     "        # if we click somehwere, call the watershed algo on our marker\n",
-    "        if marks_updated:\n",
-    "            marker_img_copy = marker_img.copy()\n",
-    "            cv2.watershed(road,marker_img_copy)\n",
-    "            segments = np.zeros(road.shape,dtype=np.uint8)\n",
-    "            for colors_ind in range(n_markers):\n",
-    "                segments[marker_img_copy==(colors_ind)]=colors[colors_ind]\n",
-    "            marks_updated=True\n",
+    "    if marks_updated:\n",
+    "        marker_img_copy = marker_img.copy()\n",
+    "        cv2.watershed(road,marker_img_copy)\n",
+    "        segments = np.zeros(road.shape,dtype=np.uint8)\n",
+    "        for colors_ind in range(n_markers):\n",
+    "            segment[marker_img_copy==(colors_ind)]=colors[colors_ind]\n",
+    "        marks_updated=False\n",
     "cv2.destroyAllWindows()"
    ]
   },
